[tool.poetry]
name         = "sharp"
version      = "0.1.0"
description  = ""
authors      = ["rrh1441 <rrh1441@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python                       = "^3.12"
openai                       = ">=1.25,<2"
fastapi                      = ">=0.111,<0.112"
uvicorn                      = {extras = ["standard"], version = ">=0.29,<0.30"}
playwright                   = ">=1.44,<1.45"
selenium                     = "^4.21"
webdriver-manager            = "^4.0"
google-api-python-client     = ">=2,<3"
google-auth                  = ">=2,<3"
google-auth-oauthlib         = ">=1,<2"
gspread                      = ">=6,<7"
pyotp                        = ">=2,<3"
python-dotenv                = ">=1,<2"
beautifulsoup4 = "^4.13.4"

[tool.poetry.group.dev.dependencies]
black  = "^24"
isort  = "^5"
mypy   = "^1"
pytest = "^8"

[build-system]
requires      = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"